tests/ui/impl-trait/impl-fn-predefined-lifetimes.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/impl-fn-predefined-lifetimes.rs:5:9
   |
LL | fn a<'a>() -> impl Fn(&'a u8) -> (impl Debug + '_) {
   |                                                -- this generic parameter must be used with a generic lifetime parameter
LL |     |x| x
   |         ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
